gccida/g1/operands_match_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2591:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2605:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2613:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v7.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2615:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2623:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)y->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2630:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v11.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/reload.c:2632:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)y + 2)); 
  ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/operands_match_p/src/obj/reload.o] Error 1
